@@ -4,6 +4,7 @@
 - bugfix testInstall() would not show path to internal plugins_dir (Forum Post 74627)
 - improvement testInstall() now showing resolved paths and checking the include_path if necessary
 - bugfix html_options plugin did not handle object values properly (Issue #49, Forum Topic 20049)
+- improvement html_checkboxes and html_radios to accept null- and object values, and label_ids attribute
 
 06.10.2011
 - bugfix switch lexer internals depending on mbstring.func_overload
